--- a/templates/foodtruck/profile_detail.html
+++ b/templates/foodtruck/profile_detail.html
@@ -10,8 +10,8 @@
     <img class="ui medium rounded image" id="profile_pic" src="{{ MEDIA_URL }}{{ object.image_url }}" alt="Picture of {{ object.image_url }}" /><br>
 
     {% if object.user == request.user %}
-      <a href="{% url 'image_update_view' user.id %}"> <i class="image icon"></i> Update Image</a> <br>
-      <a href="{% url 'email_update_view' user.id %}"> <i class="mail outline icon"></i> Update Email</a><br>
+      <a href="{% url 'image_update_view' user.id %}"> <i class="black image icon"></i> Update Image</a> <br>
+      <a href="{% url 'email_update_view' user.id %}"> <i class="black mail outline icon"></i> Update Email</a><br>
       <a href="{% url 'profile_list_api_view' %}">View your API</a>
     {% endif %}
 
