--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,8 @@
         <a class="list_stuff" href="{% url 'foodtruck_list_api_view' %}">API of Trucks</a>
         <br><br><br><br><br><br>
         <a class="list_stuff" href="{% url 'profile_list_api_view' %}">Profile API</a>
+        <br><br><br><br><br><br>
+        <a class="list_stuff" href="{% url 'map_view' %}">View Map on Full Screen</a>
         {% endif %}
         {% comment %}
         <div class="ui accordion">
