--- a/templates/index.html
+++ b/templates/index.html
@@ -33,13 +33,13 @@
           </form>
         </div>
         {% else %}
-        <a class="list_stuff" href="{% url 'foodtruck_list_view' %}">List Of Trucks</a>
+        <a class="list_stuff" href="{% url 'foodtruck_list_view' %}"><i class="list layout icon"></i> List Of Trucks</a>
         <br><br><br><br><br><br>
-        <a class="list_stuff" href="{% url 'foodtruck_list_api_view' %}">API of Trucks</a>
+        <a class="list_stuff" href="{% url 'foodtruck_list_api_view' %}"><i class="bus icon"></i> API of Trucks</a>
         <br><br><br><br><br><br>
-        <a class="list_stuff" href="{% url 'profile_list_api_view' %}">Profile API</a>
+        <a class="list_stuff" href="{% url 'profile_list_api_view' %}"><i class="user icon"></i> Profile API</a>
         <br><br><br><br><br><br>
-        <a class="list_stuff" href="{% url 'map_view' %}">View Map on Full Screen</a>
+        <a class="list_stuff" href="{% url 'map_view' %}"<i class="map icon"></i> >View Map on Full Screen</a>
         {% endif %}
         {% comment %}
         <div class="ui accordion">
