--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
         <br><br><br><br><br><br>
         <a class="list_stuff" href="{% url 'profile_list_api_view' %}"><i class="user icon"></i> Profile API</a>
         <br><br><br><br><br><br>
-        <a class="list_stuff" href="{% url 'map_view' %}"<i class="map icon"></i> >View Map on Full Screen</a>
+        <a class="list_stuff" href="{% url 'map_view' %}"><i class="map icon"></i> View Map on Full Screen</a>
         {% endif %}
         {% comment %}
         <div class="ui accordion">
