--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
           {% endif %}
           <ul><a id="options" href="{% url 'profile_detail_view' user.id %}"> <i class="users icon"></i> Profile</a></ul>
           {% if request.user.profile.is_driver %}
-            <ul><a id="options" href="{% url 'foodtruck_create_view' %}"> <i class="bus icon"></i> New Food Truck</a></ul>
+            <ul><a id="options" href="{% url 'foodtruck_create_view' %}"> <i class="truck icon"></i> New Food Truck</a></ul>
             <ul><a id="options" href="{% url 'menu_create_view' %}"> <i class="food icon"></i> New Food Item</a></ul>
           {% endif %}
           <ul><a id="options" href="{% url 'logout' %}?next={% url 'index_view' %}"> <i class="power icon"></i> Logout</a></ul>
