--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
       text-decoration: underline;
     }
     .list_stuff {
-      font-size: 36px;
+      font-size: 32px;
     }
   </style>
 {% endblock %}
@@ -35,7 +35,7 @@
         {% else %}
         <a class="list_stuff" href="{% url 'foodtruck_list_view' %}"><i class="list layout icon"></i> List Of Trucks</a>
         <br><br><br><br><br><br>
-        <a class="list_stuff" href="{% url 'foodtruck_list_api_view' %}"><i class="bus icon"></i> API of Trucks</a>
+        <a class="list_stuff" href="{% url 'foodtruck_list_api_view' %}"><i class="truck icon"></i> API of Trucks</a>
         <br><br><br><br><br><br>
         <a class="list_stuff" href="{% url 'profile_list_api_view' %}"><i class="user icon"></i> Profile API</a>
         <br><br><br><br><br><br>
