--- a/templates/map.html
+++ b/templates/map.html
@@ -5,6 +5,10 @@
     .search {
       text-align: : center;
     }
+    #map {
+      height: 100%;
+      width: 100%;
+    }
   </style>
 {% endblock %}
 
