got images uploaded working

--- a/templates/foodtruck/foodtruck_list.html
+++ b/templates/foodtruck/foodtruck_list.html
@@ -39,14 +39,15 @@
               <a href="{% url 'checkin_update_view' truck.id %}">Check Out</a>
             {% endif %}
           {% endif %}
-          
+
         </p>
       </div>
       {% endfor %}
     </div>
+    <br><br>
     <ul class="pagination">
       {% if page_obj.has_previous %}
-        <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
+        <a href="?page={{ page_obj.previous_page_number }}">Previous</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       {% endif %}
       {% if page_obj.has_next %}
         <a href="?page={{ page_obj.next_page_number }}">Next</a>
