--- a/templates/index.html
+++ b/templates/index.html
@@ -468,6 +468,7 @@
                     console.log(obj.address);
                     var x = obj.find_lat_lng;
                     console.log(x);
+                    console.log(obj.image_url);
                     if (obj.category == 1) {
                       if (obj.checked_in == true) {
                         var marker = new google.maps.Marker({
