working on names

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 {% block content %}
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 
-  <h1 class="titlename">Truckin' Around</h1>
+  <h1 class="titlename">Chowster</h1>
 
   <div class="ui grid" >
       <div class="eight wide column">
