--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,8 @@
           <ul><a id="options" href="{% url 'logout' %}?next={% url 'index_view' %}"> <i class="power icon"></i> Logout</a></ul>
         {% endif %}<br><br><br>
         <ul><a id="options" href="https://github.com/rallen0150/final_project"> <i class="github icon"></i> Github</a></ul>
+        <ul><a id="options" href="{% url 'foodtruck_list_api_view' %}"><i class="truck icon"></i> API of Trucks</a></ul>
+        <ul><a id="options" href="{% url 'profile_list_api_view' %}"><i class="user icon"></i> Profile API</a></ul>
       </div>
       <div class="pusher">
         <div class="ui basic icon fixed menu">
