--- a/templates/email_users.html
+++ b/templates/email_users.html
@@ -12,7 +12,7 @@
       {{ form.sender|attr:"placeholder:What truck do you drive?" }}
     </p>
     <p>
-      {{ form.message|add_class:"materialize-textarea"|attr:"placeholder:What would you like to say?" }}
+      {{ form.message|add_class:"materialize-textarea"|attr:"placeholder:Where is your new address?" }}
     </p>
     <button type="submit" class="ui blue submit button">
      Contact Me!
