--- a/templates/foodtruck/profile_detail.html
+++ b/templates/foodtruck/profile_detail.html
@@ -6,19 +6,73 @@
   {% else %}
     <h1>{{ object.user }}</h1>
   {% endif %}
+  <div class="ui grid">
+    <div class="eight wide column">
+      <img class="ui medium rounded image" id="profile_pic" src="{{ MEDIA_URL }}{{ object.image_url }}" alt="Picture of {{ object.image_url }}" /><br>
 
-    <img class="ui medium rounded image" id="profile_pic" src="{{ MEDIA_URL }}{{ object.image_url }}" alt="Picture of {{ object.image_url }}" /><br>
+      {% if object.user == request.user %}
+        <a href="{% url 'image_update_view' user.id %}"> <i class="black image icon"></i> Update Image</a> <br>
+        <a href="{% url 'email_update_view' user.id %}"> <i class="black mail outline icon"></i> Update Email</a><br>
+        <a href="{% url 'profile_list_api_view' %}">View your API</a>
+      {% endif %}
 
-    {% if object.user == request.user %}
-      <a href="{% url 'image_update_view' user.id %}"> <i class="black image icon"></i> Update Image</a> <br>
-      <a href="{% url 'email_update_view' user.id %}"> <i class="black mail outline icon"></i> Update Email</a><br>
-      <a href="{% url 'profile_list_api_view' %}">View your API</a>
-    {% endif %}
-
-    <h3>Favorites</h3>
-    {% for commenter in object.contents %}
-    <div class="">
-      <a href="{% url 'foodtruck_detail_view' commenter.id %}">{{ commenter }}</a>
+      <h3>Favorites</h3>
+      {% for commenter in object.contents %}
+      <div class="">
+        <a href="{% url 'foodtruck_detail_view' commenter.id %}">{{ commenter }}</a>
+      </div>
+      {% endfor %}
     </div>
-    {% endfor %}
+    <div class="eight wide column">
+      <div class="ui minimal comments">
+        <h3 class="ui dividing header">Comments</h3>
+        {% for comment in object.get_profile_comment %}
+        <div class="comment">
+          <a class="avatar">
+            <img src="{{ MEDIA_URL}}{{ comment.user.profile.image_url }}">
+          </a>&nbsp;&nbsp; <a href="{% url 'profile_detail_view' comment.user.id %}">{{ comment.user }}</a> <i id="time">{{ comment.created|timesince }}</i><style>#time{ padding-left: 1.8em;}</style>
+        </div>
+        <div class="content">
+          <b>&nbsp; &nbsp;{{ comment.comment }}</b>
+          {% if request.user == comment.user %}
+            <a href="{% url 'profile_comment_update_view' comment.id %}"> <i class="edit icon"></i> Update Comment</a>
+          {% endif %}
+        </div>
+        <div class="actions">
+          &nbsp; &nbsp;<a href="{% url 'profile_reply_create_view' comment.id %}"> <i class="reply icon"></i> Reply</a>
+        </div>
+
+        <blockquote>
+          <div class="comments">
+            {% for reply in comment.get_reply %}
+            <div class="comment">
+              <div class="contents">
+                <a class="avatar">
+                  <img src="{{ MEDIA_URL}}{{ reply.user.profile.image_url }}">
+                </a>&nbsp; &nbsp; <a href="{% url 'profile_detail_view' reply.user.id %}">{{ reply.user }}</a> <i id="time">{{ reply.created|timesince }}</i><style>#time{ padding-left: 1.8em;}</style>
+              </div>
+              <div class="text">
+                <b>&nbsp; &nbsp;{{ reply }}</b>
+                {% if request.user == reply.user %}
+                  <a href="{% url 'profile_reply_update_view' reply.id %}"> <i class="edit icon"></i> Update Reply</a>
+                {% endif %}
+              </div>
+            </div>
+            {% endfor %}
+          </div>
+        </blockquote>
+
+        <br>
+        {% endfor %}
+        <form class="ui reply form" action="{% url 'profile_comment_create_view' object.id %}" method="post">
+          {% csrf_token %}
+          <div class="field">
+            <textarea name="comment" rows="5" cols="30"></textarea>
+             <button type="submit"><i class="comment icon"></i> Comment!</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
 {% endblock %}
