--- a/templates/foodtruck/foodtruck_form.html
+++ b/templates/foodtruck/foodtruck_form.html
@@ -1,14 +1,34 @@
 {% extends 'base.html' %}
 
+{% block css %}
+  <style media="screen">
+    .column {
+      max-width: 550px;
+    }
+  </style>
+{% endblock %}
+
 {% block content %}
-  {% if object.driver == request.user %}
     <br><br><br>
-    <form class="" action="" method="post" enctype="multipart/form-data">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <input type="submit" class="ui blue submit button" name="" value="New Driver!">
-    </form>
-  {% else %}
-    <h1>Not Supposed To Be Here!!!</h1>
-  {% endif %}
+    {% if request.user.profile.is_driver %}
+      <div class="ui middle aligned center aligned grid">
+        <div class="column">
+          <div class="ui piled form segment">
+            <div class="ui attached message">
+              <div class="header">
+                <h2>Please Fill Out Your Truck's Information!</h2>
+              </div>
+            </div>
+            <form class="ui form attached fluid segment" action="" method="post" enctype="multipart/form-data">
+              {% csrf_token %}
+              {{ form.as_p }}
+              <input type="submit" class="ui blue submit button" name="" value="New Driver!">
+            </form>
+          </div>
+        </div>
+      </div>
+    {% else %}
+      <h1>NOT SUPPOSED TO BE HERE!!!</h1>
+    {% endif %}
+
 {% endblock %}
