--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -10,33 +10,37 @@
 
 {% block content %}
 <br><br>
-  <div class="ui middle aligned center aligned grid">
-    <div class="column">
-      <h2 class="ui blue image header">Login To Your Account</h2>
-
-      <form class="ui large form" action="" method="post">
-        {% csrf_token %}
-        <div class="ui stacked segment">
-          <div class="field">
-            <div class="ui left icon input">
-              <i class="user icon"></i>
-              <input type="text" name="username" value="" placeholder="Username">
-            </div>
-          </div>
-          <div class="field">
-            <div class="ui left icon input">
-              <i class="lock icon"></i>
-              <input type="password" name="password" placeholder="Password">
-            </div>
-          </div>
-          <input type="submit" class="ui fluid large teal submit button" name="" value="Login">
+<div class="ui middle aligned center aligned grid">
+  <div class="column">
+    <div class="ui stacked segment">
+      <div class="ui attached message">
+        <div class="header">
+          <h2 class="ui blue image header">Login To Your Account</h2>
         </div>
-      </form>
-      <div class="ui message">
-        <b>New to Chowster?</b>
-        <a href="{% url 'user_create_view' %}">Sign Up</a>
       </div>
+      <br>
+      <form class="ui form attached segment" action="{% url 'login' %}" method="post">
+        {% csrf_token %}
+        <div class="field">
+          <div class="ui left icon input">
+            <i class="user icon"></i>
+            <input type="text" name="username" value="" placeholder="Username">
+          </div>
+        </div>
+        <div class="field">
+          <div class="ui left icon input">
+            <i class="lock icon"></i>
+            <input type="password" name="password" placeholder="Password">
+          </div>
+        </div>
+        <input type="submit" class="ui fluid large teal submit button" name="" value="Login">
+      </div>
+    </form>
+    <div class="ui message">
+      <b>New to Chowster?</b>
+      <a href="{% url 'user_create_view' %}">Sign Up</a>
     </div>
   </div>
+</div>
 
 {% endblock %}
