--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -8,53 +8,61 @@
       padding: 8px;
       width: 30%
     }
+    .column {
+      max-width: 600px;
+    }
   </style>
 {% endblock %}
 
 {% block content %}
-  <h2>Food Truck Search</h2>
-
-  <form class="" action="." method="get">
-    <table>
-      {{ form.as_table }}
-      <tr>
-        <td>&nbsp;</td>
-        <td>
-          <input type="submit" value="Search">
-        </td>
-      </tr>
-    </table>
-
-    {% if query %}
-      <h3>Search Results</h3>
-      {% for result in page.object_list %}
-        <table border="1">
-          <tr id="opt">
-            <th id="opt">Truck Name </th>
-            <th id="opt">Driver </th>
-            <th id="opt">Truck Category </th>
-            <th id="opt">Checked In? </th>
-          </tr>
-          <tr id="opt">
-            <td id="opt"><a href="{% url 'foodtruck_detail_view' result.object.id %}">{{ result.object.truck_name }}</a></td>
-            <td id="opt">{{ result.object.driver }}</td>
-            <td id="opt">{{ result.object.category }}</td>
-            <td id="opt">{{ result.object.checked_in }}</td>
-          </tr>
-        </table>
-      {% empty %}
-        <p>
-          <b>No results found</b>
-        </p>
-      {% endfor %}
-
-      {% if page.has_previous or page.has_next %}
-          <div>
-              {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
-              |
-              {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
+<br><br>
+  <div class="ui middle aligned center aligned grid">
+    <div class="column">
+      <div class="ui piled form segment">
+        <div class="ui attached message">
+          <div class="header">
+            <h2>Food Truck Search</h2>
           </div>
-      {% endif %}
-    {% endif %}
-  </form>
+        </div>
+        <form class="ui form attached segment" action="." method="get">
+          {% csrf_token %}
+          <input id="id_q" type="search" name="q" value="">
+          <button class="ui icon blue button" type="submit">
+            <i class="search icon"></i> Search
+          </button>
+        </form>
+        {% if query %}
+          <h3>Search Results</h3>
+          {% for result in page.object_list %}
+            <table border="1">
+              <tr id="opt">
+                <th id="opt">Truck Name </th>
+                <th id="opt">Driver </th>
+                <th id="opt">Truck Category </th>
+                <th id="opt">Checked In? </th>
+              </tr>
+              <tr id="opt">
+                <td id="opt"><a href="{% url 'foodtruck_detail_view' result.object.id %}">{{ result.object.truck_name }}</a></td>
+                <td id="opt">{{ result.object.driver }}</td>
+                <td id="opt">{{ result.object.category }}</td>
+                <td id="opt">{{ result.object.checked_in }}</td>
+              </tr>
+            </table>
+          {% empty %}
+            <p>
+              <b>No results found</b>
+            </p>
+          {% endfor %}
+
+          {% if page.has_previous or page.has_next %}
+              <div>
+                  {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
+                  |
+                  {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
+              </div>
+          {% endif %}
+        {% endif %}
+      </div>
+    </div>
+  </div>
 {% endblock %}
