--- a/templates/foodtruck/foodtruck_form.html
+++ b/templates/foodtruck/foodtruck_form.html
@@ -28,7 +28,15 @@
         </div>
       </div>
     {% else %}
-      <h1>NOT SUPPOSED TO BE HERE!!!</h1>
+    <br><br>
+      <div class="ui middle aligned center aligned grid">
+        <div class="ui negative message">
+          <div class="header">
+            <h1>Not Supposed To Be Here!!!</h1> <hr>
+          </div>
+          <p>You are NOT assigned as a truck driver, so you cannot add any foodtrucks.</p>
+        </div>
+      </div>
     {% endif %}
 
 {% endblock %}
