--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,18 +3,23 @@
 
 {% block css %}
   <style media="screen">
-    .questions {
-      text-align: center;
+    .column {
+      max-width: 550px;
     }
   </style>
 {% endblock %}
 
 {% block content %}
-<br><br>
-<div class="ui two column centered grid">
-  <div class="column">
-    <h2 class="questions">If you have any Questions or Comments please contact me!</h2>
-      <form class="" action="{% url 'send_mail' %}" method="post">
+<br><br><br>
+<div class="ui middle aligned center aligned grid">
+  <div class="blue column">
+    <div class="ui stacked form segment">
+      <div class="ui blue attached message">
+        <div class="header">
+          <h2>If you have any Questions or Comments please contact me!</h2>
+        </div>
+      </div>
+      <form class="ui form attached fluid segment" action="{% url 'send_mail' %}" method="post">
         {% csrf_token %}
         <p>
           {{ form.sender|attr:"placeholder:Who are you?"|attr:"type:email" }}
@@ -26,7 +31,7 @@
          Contact Me!
        </button>
       </form>
+    </div>
   </div>
 </div>
-
 {% endblock %}
