--- a/templates/foodtruck/menu_form.html
+++ b/templates/foodtruck/menu_form.html
@@ -1,31 +1,46 @@
 {% extends 'base.html' %}
 
+{% block css %}
+  <style media="screen">
+    .column {
+      max-width: 550px;
+    }
+    .negative {
+      max-width: 550px;
+    }
+  </style>
+{% endblock %}
+
 {% block content %}
   {% if request.user.profile.is_driver %}
     <br><br><br>
-    <form class="" action="" method="post">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <!-- {% comment %}
-      <p>
-        <input type="text" name="food" placeholder="Name of Food Item">
-      </p>
-      <p>
-        $<input type="number" name="price" step=".01" placeholder="Price">
-      </p>
-      {% if request.user == object.truck.driver %}
-        <p>
-          <select>
-            <option value="truck">{{ object.truck }}</option>
-          </select>
-        </p>
-      {% endif %}
-      {% endcomment %} -->
-      <input type="submit" class="ui blue submit button" name="" value="New Food Item!">
-    </form>
+    <div class="ui middle aligned center aligned grid">
+      <div class="column">
+        <div class="ui stacked form segment">
+          <div class="ui attached message">
+            <div class="header">
+              <h2>New Food Item</h2>
+            </div>
+          </div>
+          <form class="ui form attached fluid segment" action="" method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" class="ui blue submit button" name="" value="New Food Item!">
+          </form>
+        </div>
+        <b><a href="{% url 'index_view' %}">Finished Making Menu, Back to Home</a></b>
+      </div>
+    </div>
 
-    <b><a href="{% url 'index_view' %}">Finished Making Menu, Back to Home</a></b>
   {% else %}
-    <h1>Not Supposed To Be Here!!!</h1>
+  <br><br><br>
+    <div class="ui middle aligned center aligned grid">
+      <div class="ui negative message">
+        <div class="header">
+          <h1>Not Supposed To Be Here!!!</h1> <hr>
+        </div>
+        <p>Please go back and find your own truck. Don't try add any food items to another truck.</p>
+      </div>
+    </div>
   {% endif %}
 {% endblock %}
