--- a/templates/foodtruck/profile_reply_form.html
+++ b/templates/foodtruck/profile_reply_form.html
@@ -1,10 +1,24 @@
 {% extends 'base.html' %}
 
+{% block css %}
+  <style media="screen">
+    .column {
+      max-width: 650px;
+    }
+  </style>
+{% endblock %}
+
 {% block content %}
 <br><br>
-  <form class="" action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" name="" value="Comment">
-  </form>
+  <div class="ui middle aligned center aligned grid">
+    <div class="column">
+      <div class="ui raised form segment">
+        <form class="ui form attached fluid segment" action="" method="post">
+          {% csrf_token %}
+          {{ form.as_p }}
+          <input type="submit" class="ui blue submit button" name="" value="Reply!">
+        </form>
+      </div>
+    </div>
+  </div>
 {% endblock %}
