--- a/templates/foodtruck/location_update.html
+++ b/templates/foodtruck/location_update.html
@@ -14,7 +14,7 @@
   {% if request.user == object.driver %}
   <div class="ui middle aligned center aligned grid">
     <div class="column">
-      <div class="ui piled form segment">
+      <div class="ui stacked form segment">
         <div class="ui attached message">
           <div class="header">
             <h2>Please Update Your Truck's Location!</h2>
