--- a/templates/foodtruck/profile_detail.html
+++ b/templates/foodtruck/profile_detail.html
@@ -68,7 +68,7 @@
           {% csrf_token %}
           <div class="field">
             <textarea name="comment" rows="5" cols="30"></textarea>
-             <button type="submit"><i class="comment icon"></i> Comment!</button>
+             <button type="submit" class="ui blue submit button"><i class="comment icon"></i> Comment!</button>
           </div>
         </form>
       </div>
