--- a/templates/foodtruck/profile_form.html
+++ b/templates/foodtruck/profile_form.html
@@ -16,7 +16,7 @@
 {% if not request.user.profile.is_driver and not request.user.profile.is_user %}
   <div class="ui middle aligned center aligned grid">
     <div class="column">
-      <div class="ui raised form segment">
+      <div class="ui stacked form segment">
         <div class="ui attached message">
           <div class="header">
             <h2>Create New Profile!</h2>
