--- a/templates/auth/user_form.html
+++ b/templates/auth/user_form.html
@@ -12,7 +12,7 @@
 <br><br>
   <div class="ui middle aligned center aligned grid">
     <div class="column">
-      <div class="ui piled form segment">
+      <div class="ui stacked form segment">
         <div class="ui attached message">
           <div class="header">
             <h2>Welcome to Chowster</h2>
