--- a/templates/foodtruck/foodtruck_form.html
+++ b/templates/foodtruck/foodtruck_form.html
@@ -13,7 +13,7 @@
     {% if request.user.profile.is_driver %}
       <div class="ui middle aligned center aligned grid">
         <div class="column">
-          <div class="ui piled form segment">
+          <div class="ui stacked form segment">
             <div class="ui attached message">
               <div class="header">
                 <h2>Please Fill Out Your Truck's Information!</h2>
