--- a/templates/foodtruck/profile_comment_form.html
+++ b/templates/foodtruck/profile_comment_form.html
@@ -2,9 +2,15 @@
 
 {% block content %}
 <br><br>
-  <form class="" action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" name="" value="Comment">
-  </form>
+<div class="ui middle aligned center aligned grid">
+  <div class="column">
+    <div class="ui stacked form segment">
+      <form class="ui form attached fluid segment" action="" method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" class="ui blue submit button" name="" value="Comment!">
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock %}
