--- a/templates/foodtruck/profile_reply_form.html
+++ b/templates/foodtruck/profile_reply_form.html
@@ -12,7 +12,7 @@
 <br><br>
   <div class="ui middle aligned center aligned grid">
     <div class="column">
-      <div class="ui raised form segment">
+      <div class="ui stacked form segment">
         <form class="ui form attached fluid segment" action="" method="post">
           {% csrf_token %}
           {{ form.as_p }}
