--- a/templates/about.html
+++ b/templates/about.html
@@ -25,7 +25,7 @@
             which food truck is in your area based off your location.  I am from Greenville, South Carolina so the site is centered
             around downtown Greenville. I went to USC-Columbia for Computer Science and Greenville Technical College for Electrical Engineering before going to The Iron Yard.
             I was apart of the Back-End Engineer classes of The Iron Yard. I have had very basic HTML before The Iron Yard, but
-            not as much as I learned here. I previously built a page many years ago, but unfortunatly it is no longer on the internet.
+            not as much as I learned here. I previously built a page many years ago, but unfortunately it is no longer on the internet.
             That class is what made me want to develop webpages for a living. I searched coding schools and I landed on the Iron Yard since there was a campus listed in Greenville.
             Being a Back-End Engineer, I deal with data that stores information across the web page. I am going to continue working on this page, but the
             goal is to make this page a mobile app for easier access.</h4>
