more working out bugs

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,12 @@
     {% block css %}
     {% endblock %}
       <style>
+        .ui.menu {
+          background-color: #DCDCDC;
+        }
         .body {
           padding: 22px;
+          background-color: #FFFFF9;
         }
         #map {
           height: 450px;
