doing some final touches

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     .titlename {
       text-align: center;
       text-decoration: underline;
+      font-size: 48px;
     }
     .list_stuff {
       font-size: 32px;
